# adg-siem

./: .gitignore  .trivyignore  LICENSE  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
breadcrumbs/: README.md
breadcrumbs/ansible/: inventory.example.ini
breadcrumbs/scripts/: decoy_memory.ps1  decoy_memory.py
charts/adg-controller/: Chart.yaml  values.yaml
charts/honeypots/: Chart.yaml  values.yaml
controller/: Dockerfile  README.md  pyproject.toml  requirements.txt
controller/app/: ad.py  alerts.py  audit.py  auth.py  bus.py  cmdb.py  config.py  deception.py  dns.py  dns_providers.py  enrichment.py  health.py  kill_chain.py  leader.py  main.py  models.py  orchestrator.py  policy.py  redaction.py  rules.py  security.py  siem.py  state.py  ttl.py  utils.py
controller/policies/: deception-policy.yaml
controller/rules/: example.yaml
controller/static/: index.html
controller/tests/: test_actions.py  test_deception.py  test_kill_chain.py  test_redaction.py  test_rules.py  test_state.py
dashboards/: README.md
docs/: architecture.md  compliance.md  configuration.md  data-flow.md  deployment-guide.md  infra-values.md  operations.md  runbooks.md  security.md  testing.md
honeypot-farm/: README.md
infra/: README.md
infra/k8s/: soar-hpa.yaml  (+4 more)
policies/: deception-policy.yaml
scripts/: generate_sbom.sh  scan_vulns.sh  sign_images.sh
soar-playbooks/: Dockerfile  README.md  pyproject.toml  requirements.txt
token-engine/: Dockerfile  README.md  pyproject.toml  requirements.txt
validation/: README.md  atomic-red-team.md  caldera.md
(+89 files in other folders)
