[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adg-controller"
version = "0.1.0"
dependencies = [
  "fastapi==0.111.0",
  "uvicorn==0.30.1",
  "pydantic==2.7.4",
  "pydantic-settings==2.3.4",
  "PyYAML==6.0.1",
  "httpx==0.27.0",
  "redis==5.0.4",
  "kubernetes==29.0.0",
  "python-json-logger==2.0.7",
  "PyJWT==2.8.0",
  "cryptography==42.0.8",
  "slowapi==0.1.9",
  "prometheus-fastapi-instrumentator==7.0.0",
  "opentelemetry-api==1.25.0",
  "opentelemetry-sdk==1.25.0",
  "opentelemetry-instrumentation-fastapi==0.46b0",
  "opentelemetry-exporter-otlp==1.25.0",
  "hvac==2.2.0",
  "dnspython==2.6.1",
  "psycopg[binary]==3.1.19"
  ,"ldap3==2.9.1"
]

[project.optional-dependencies]
test = ["pytest==8.2.2"]
